--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,15 @@
 body {
-  padding: 80px 40px;
+  padding: 10px !important;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
- /* background-image: url('/images/background2.png');*/
+  background-image: url('/images/startysky.gif');
+}
+
+.panel-heading {
+	font-family: "Comic Sans MS", sans-serif;
 }
 
 #index-search {
-	width: 80%;
+	width: 100%;
 }
 
 .nav-search input {
@@ -49,6 +53,10 @@ body {
 /* datatable tweaks */
 table {
 	width: 100% !important;
+	font-size: 10px !important;
+}
+td {
+	line-height: 26px !important;
 }
 .dataTables_info, .dataTables_length {
 	padding-left: 10px;
