--- a/views/includes/address_history.jade
+++ b/views/includes/address_history.jade
@@ -1,15 +1,20 @@
 thead
   tr
-    th.hidden-xs #{settings.locale.timestamp}
+    th #{settings.locale.timestamp}
     th.hidden-xs #{settings.locale.tx_hash}
+    th.hidden-xs #{settings.locale.confirmations}
     th #{settings.locale.mkt_amount} (#{settings.symbol})
 tbody
   each tx in txs
     - var time = format_unixtime(tx.timestamp)
+    - var confirms = (blockcount - tx.blockindex);
     tr
-      td.hidden-xs #{time} 
+      td 
+        a(href='/tx/#{tx.txid}') #{time} 
       td.hidden-xs
         a(href='/tx/#{tx.txid}') #{tx.txid}
+      td.hidden-xs
+        a(href='/tx/#{tx.txid}') #{confirms}
       - var done = false
       - var out = 0
       - var vin = 0
@@ -21,19 +26,22 @@ tbody
           - vin = s.amount
       if out > 0 && vin > 0
         td.info
-          - var amount = (out - vin) / 100000000
-          if amount < 0
-            - amount = amount * -1
-            | - #{amount.toFixed(8)}
-          else if amount > 0
-            | + #{amount.toFixed(8)}
-          else
-            | #{amount.toFixed(8)}
+          a(href='/tx/#{tx.txid}')
+            - var amount = (out - vin) / 100000000
+            if amount < 0
+              - amount = amount * -1
+              | - #{amount.toFixed(8)}
+            else if amount > 0
+              | + #{amount.toFixed(8)}
+            else
+              | #{amount.toFixed(8)}
       else if out > 0
         td.success
-          - var amount = out / 100000000
-          | + #{amount.toFixed(8)}
+          a(href='/tx/#{tx.txid}')
+            - var amount = out / 100000000
+            | + #{amount.toFixed(8)}
       else
         td.danger
-          - var amount = vin / 100000000
-          | - #{amount.toFixed(8)}
+          a(href='/tx/#{tx.txid}')
+            - var amount = vin / 100000000
+            | - #{amount.toFixed(8)}
