--- a/views/index.jade
+++ b/views/index.jade
@@ -1,70 +1,111 @@
 extends layout
 
 block content
+  .row
+    .col-md-10.col-md-offset-1
+      p You can earn LiteDoge by validating block transactions.
+      p Keep your coins for at least 8 hours in your wallet and they will be eligible for staking!
+      p The time needed to get stake reward depends on the number of coins you hold in your wallet.
+
   script.
     $(document).ready(function(){
-      var stable = $('#block-table').dataTable( {  
-        autoWidth: true,      
-        searching: true,
-        ordering: false,
-        responsive: true,
-        lengthChange: false,
-        processing: true,
-        paging: false,
-        info: false,
-        ajax: {
-          url: '/ext/summary',
-          dataSrc: function ( json ) {
-          console.log(json.data);
-            json.data[0]['height'] = "<a href='/block/" + json.data[0]['hash'] + "'>" + json.data[0]['height'] + "</a>";
-            return json.data;
-          }
-        },
-        columns: [
-          //{ data: 'height', width: '8%' },
-          { data: 'difficulty', width: '10%' },
-          //{ data: 'size', width:'10%' },
-          //{ data: 'txs', width: '10%' },
-          { data: 'supply', width: '15%' },
-          //{ data: 'time', width: '20%' },
-        ]
-      });
       var rtable = $('#recent-table').dataTable( {  
-        autoWidth: true,      
+        paging: false,    
         searching: false,
         ordering: false,
-        responsive: true,
-        lengthChange: true,
-        processing: true,
+        info: false,
         ajax: {
           url: '/ext/getlasttxs/0.00000001',
           dataSrc: function ( json ) {
             for ( var i=0;i<json.data.length; i++ ) {
-              json.data[i]['timestamp'] = new Date((json.data[i]['timestamp']) * 1000).toUTCString();
-              json.data[i]['txid'] = "<a href='/tx/" + json.data[i]['txid'] + "'>" + json.data[i]['txid'] + "</a>";
-              json.data[i]['blockindex'] = "<a href='/block/" + json.data[i]['blockhash'] + "'>" + json.data[i]['blockindex'] + "</a>";
+              json.data[i]['timestamp'] = "<a href='/tx/" + json.data[i]['txid'] + "'>" + moment(new Date((json.data[i]['timestamp']) * 1000)).fromNow();
               var amount = json.data[i]['total'] / 100000000;
-              json.data[i]['total'] = amount.toFixed(8);
-              json.data[i]['recipients'] = json.data[i]['vout'].length;
+              var symbol = '';
+              if (amount > 1000000) symbol = '💎 ';
+              if (amount > 2000000) symbol = '💎💎 ';
+              if (amount > 10000000) symbol = '💎💎💎 ';
+              if (amount > 50000000) symbol =  '🐶🐶🐶 ';
+              amount = amount > 10 ? amount = Math.round(amount) : amount.toFixed(8);
+              amount = amount > 999 ? amount.toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ") : amount;
+              json.data[i]['total'] = "<a href='/tx/" + json.data[i]['txid'] + "'>" + symbol + amount + "</a>";
+              json.data[i]['recipients'] = "<a href='/tx/" + json.data[i]['txid'] + "'>" + json.data[i]['vout'].length + "</a>";
             }
             return json.data;
           }
         },
         columns: [
-          { data: 'blockindex', width: '8%' },
-          { data: 'txid', width: '40%' },
-          { data: 'recipients', width:'5%' },
-          { data: 'total', width: '15%' },
-          { data: 'timestamp', width: '25%' },
+          { data: 'total', className: 'text-right' },
+          { data: 'recipients' },
+          { data: 'timestamp' },
+        ]
+      });
+      var ptable = $('#pos-table').dataTable( {  
+        paging: false,    
+        searching: false,
+        ordering: false,
+        info: false,
+        ajax: {
+          url: '/ext/getlastpos',
+          dataSrc: function ( json ) {
+            for ( var i=0;i<json.data.length; i++ ) {
+              json.data[i]['timestamp'] = "<a href='/address/" + json.data[i]['vout'][0]['addresses'] + "'>" + moment(new Date((json.data[i]['timestamp']) * 1000)).fromNow();
+              var amount = json.data[i]['total'] / 100000000;
+              amount = Math.round(amount);
+              json.data[i]['total'] = "<a href='/address/" + json.data[i]['vout'][0]['addresses'] + "'>" + amount + "</a>";
+              json.data[i]['avatar'] = "<img src='https://avatars.dicebear.com/v1/male/" + json.data[i]['vout'][0]['addresses'] + "/24.png' />";
+              json.data[i]['recipient'] = "<a href='/address/" + json.data[i]['vout'][0]['addresses'] + "'>" + json.data[i]['vout'][0]['addresses'] + "</a>";
+             }
+            return json.data;
+          }
+        },
+        columns: [
+          { data: 'avatar' },
+          { data: 'recipient', className: 'hidden-xs text-left'},
+          { data: 'total' },
+          { data: 'timestamp' },
+        ]
+      });
+      var rtable = $('#rich-table').dataTable( {  
+        paging: false,    
+        searching: false,
+        ordering: false,
+        info: false,
+        ajax: {
+          url: '/ext/getrichlist',
+          dataSrc: function ( json ) {
+            for ( var i=0;i<json.data.length; i++ ) {
+              var address = json.data[i]['a_id'];
+
+              json.data[i]['rank'] = "<a href='/address/" + address + "'>#" + (i+1) + ".</a>";
+
+              json.data[i]['avatar'] = "<a href='/address/" + address + "'><img src='https://avatars.dicebear.com/v1/male/" + address + "/24.png' /></a>";
+
+              json.data[i]['address'] = "<a href='/address/" + address + "'>" + address + "</a>";
+
+              var amount = json.data[i]['balance'] / 100000000;
+              amount = amount > 10 ? amount = Math.round(amount) : amount.toFixed(8);
+              amount = amount > 999 ? amount.toString().replace(/\B(?=(\d{3})+(?!\d))/g, " ") : amount;
+
+              json.data[i]['balance'] = "<a href='/address/" + address + "'>" + amount + "</a>";
+             }
+            return json.data;
+          }
+        },
+        columns: [
+          { data: 'rank' },
+          { data: 'avatar' },
+          { data: 'address', className: 'hidden-xs text-left' },
+          { data: 'balance' }
         ]
       });
       setInterval( function () {
+        ptable.api().ajax.reload(null, false);
         rtable.api().ajax.reload(null, false);
-        stable.api().ajax.reload(null, false);
       }, 60000 );
     });
+
   .row
-    .col-md-12
+    .col-md-10.col-md-offset-1.col-xs-12
       if error !== null        
         .alert.alert-danger.alert-dismissable(role='alert')
           button.close(type='button', data-dismiss='alert') ×
@@ -74,19 +115,43 @@ block content
           button.close(type='button', data-dismiss='alert') ×
           strong #{settings.locale.ex_warning} #{warning}
   
-  .col-md-12
-    .panel.panel-default
-      .panel-heading
-        strong #{settings.locale.ex_latest_transactions}
-      table#recent-table.table.table-bordered.table-striped
-        thead
-          tr
-            th.text-center #{settings.locale.ex_block}
-            th.hidden-xs.text-center #{settings.locale.tx_hash}
-            th.hidden-xs.text-center #{settings.locale.tx_recipients}
-            th.text-center #{settings.locale.mkt_amount} (#{settings.symbol})
-            th.text-center #{settings.locale.timestamp}
-        tbody.text-center
-    .footer-padding
-      
-              
+  .row
+    .col-md-6.col-md-offset-1.col-xs-12
+      .panel.panel-default
+        .panel-heading
+          strong Latest Stake Rewards
+        table#pos-table.table.table-bordered.table-striped
+          thead.hidden-xs
+            tr
+              th.text-center 
+              th.text-center.hidden-xs Staking address
+              th.text-center Paid
+              th.text-center #{settings.locale.timestamp}
+          tbody.text-center
+
+    .col-md-4.col-xs-12
+      .panel.panel-default
+        .panel-heading
+          strong Much Spending
+        table#recent-table.table.table-bordered.table-striped
+          thead.hidden-xs
+            tr
+              th.text-center #{settings.locale.mkt_amount} (#{settings.symbol})
+              th.text-center #{settings.locale.tx_recipients}
+              th.text-center #{settings.locale.timestamp}
+          tbody.text-center
+
+  .row
+    .col-md-10.col-md-offset-1.col-sm-12
+      .panel.panel-default
+        .panel-heading
+          strong So many LDOGE!
+        table#rich-table.table.table-bordered.table-striped
+          thead.hidden-xs
+            tr
+              th.text-center Rank
+              th.text-center
+              th.text-center.hidden-xs Address
+              th.text-center LDOGEs
+          tbody.text-center
+      .footer-padding
