--- a/views/markets/cryptopia.jade
+++ b/views/markets/cryptopia.jade
@@ -2,7 +2,7 @@ extends menu
  
 block market_view
   .row
-    .col-md-12  
+    .col-md-10.col-md-offset-1
       .panel.panel-default
         .panel-heading
           strong #{settings.locale.cryptopia} - #{marketdata.coin}/#{marketdata.exchange} - #{settings.locale.mkt_hours}
@@ -32,7 +32,7 @@ block market_view
               else
                 td.danger #{cryptopia_change} %
   .row
-    .col-md-6.col-xs-12
+    .col-md-5.col-md-offset-1.col-xs-12
       .panel.panel-default
         .panel-heading
           h3.panel-title #{settings.locale.mkt_buy_orders}
@@ -52,7 +52,7 @@ block market_view
                 td.hidden-xs
                   =buy.total
 
-    .col-md-6.col-xs-12
+    .col-md-5.col-xs-12
       .panel.panel-default
         .panel-heading
           h3.panel-title #{settings.locale.mkt_sell_orders}
@@ -72,7 +72,7 @@ block market_view
                 td.hidden-xs
                   =sell.total
   .row   
-    .col-md-12
+    .col-md-10.col-md-offset-1
       .panel.panel-default
         .panel-heading
           h3.panel-title #{settings.locale.mkt_trade_history}
